--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -2,6 +2,8 @@
 
 .shows {
     padding: 2vw 5.6vw;
+    min-height: 50vw;
+    
     &__list{
         display: none;
         grid-template-columns: 1fr 1fr 1fr;
