--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,12 +5,14 @@
 @use 'available-devices';
 @use 'faq';
 @use 'footer';
+@use 'header';
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    list-style: none;
 }
 
 
@@ -61,17 +63,46 @@ body{
 }
 
 .button{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     color: variaveis.$corTextoSecundario;
-    background-color: #6421ff;
+    background-color: variaveis.$cordeFundoBotaoPrimario;
     text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 1px;
+    padding: 8px 14px;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
+    border: 1px solid variaveis.$cordeFundoBotaoPrimario;
     cursor: pointer;
+
+
+    &:hover{
+        background-color: lighten(variaveis.$cordeFundoBotaoPrimario, 3%);
+    }
+
+    &--secondary{
+        background-color: variaveis.$corDeFundoBotaoSecundario;
+        border-color: variaveis.$corTextoSecundario;
+        border: none;
+
+        &:hover{
+            background-color: lighten(variaveis.$corDeFundoBotaoSecundario, 3%);
+        }
+    }
+
+    &--dark{
+        background-color: rgba(variaveis.$corDeFundoBotaoDark, 0.8);
+        border-color: variaveis.$corTextoSecundario;
+
+        &:hover{
+            background-color: variaveis.$corTextoSecundario;
+            color: variaveis.$corDeFundo;
+        }
+    }
 }
 
 .image-text-section{
